# oxide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  app.yaml  prompts.md
.github/workflows/: ci.yml  docs-pages.yml
docs/: SUMMARY.md  api-reference.md  app-builder-reference.md  architecture.md  auth.md  benchmarks.md  book.toml  cli-reference.md  cli.md  configuration.md  controllers.md  db.md  docs-drift-checklist.md  getting-started.md  index.md  middleware.md  mongodb.md  responses.md  roadmap.md  routing.md  state.md  supabase.md  troubleshooting.md  upgrade-notes.md  versioning.md
docs/api/: app.md  auth.md  controllers.md  extractors.md
docs/theme/: custom.css
oxide-framework-cli/: Cargo.toml
oxide-framework-cli/src/: bench_cmd.rs  generate.rs  main.rs  migrate_cmd.rs  new_project.rs  run_cmd.rs  test_cmd.rs
oxide-framework-core/: Cargo.toml
oxide-framework-core/benches/: overhead.rs
oxide-framework-core/examples/: bench_oxide.rs  bench_raw_axum.rs  hello.rs  loadtest.rs
oxide-framework-core/src/: app.rs  config.rs  controller.rs  error.rs  extract.rs  lib.rs  logging.rs  middleware.rs  rate_limit.rs  response.rs  router.rs  state.rs
oxide-framework-core/src/auth/: claims.rs  config.rs  extract.rs  layer.rs  mod.rs  token.rs
oxide-framework-core/tests/: auth_tests.rs  controller_tests.rs  core_maturity_tests.rs  di_lifecycles_test.rs  hooks_and_middleware_tests.rs  integration.rs
oxide-framework-db/: Cargo.toml
oxide-framework-db/src/: lib.rs
oxide-framework-db/tests/: sqlite_integration_test.rs
oxide-framework-macros/: Cargo.toml
oxide-framework-macros/src/: controller.rs  lib.rs
oxide-framework-mongodb/: Cargo.toml
oxide-framework-mongodb/src/: lib.rs
oxide-framework-mongodb/tests/: mongodb_tests.rs
oxide-framework-supabase/: Cargo.toml
oxide-framework-supabase/src/: lib.rs
oxide-framework-supabase/tests/: supabase_tests.rs
oxide_cli/: Cargo.toml
oxide_cli/src/: bench_cmd.rs  generate.rs  main.rs  new_project.rs  test_cmd.rs
oxide_core/: Cargo.toml
oxide_core/examples/: bench_oxide.rs  hello.rs  loadtest.rs
oxide_core/src/: app.rs  controller.rs  extract.rs  lib.rs  logging.rs  middleware.rs  response.rs  router.rs
oxide_core/src/auth/: claims.rs  config.rs  mod.rs
oxide_core/tests/: integration.rs
oxide_db/: Cargo.toml
oxide_macros/: Cargo.toml
oxide_macros/src/: controller.rs  lib.rs
