[workspace]
members = ["oxide_core", "oxide_macros", "oxide_cli", "oxide_db"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A production-ready, zero-boilerplate web framework for Rust."
repository = "https://github.com/i228808/oxide"
homepage = "https://github.com/i228808/oxide"
readme = "README.md"
