[package]
name = "oxide-framework-core"
version.workspace = true
edition.workspace = true
description = "Core runtime and framework logic for the Oxide web framework."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
oxide-framework-macros = { version = "0.1.0", path = "../oxide-framework-macros" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
cookie = "0.18"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "overhead"
harness = false

