[package]
name = "oxide_framework_macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for the Oxide web framework."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

