[package]
name = "oxide-framework-supabase"
version.workspace = true
edition.workspace = true
description = "Supabase (PostgREST/RPC) integration for the Oxide web framework."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
oxide-framework-core = { version = "0.1.0", path = "../oxide-framework-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
