[package]
name = "oxide_cli"
version.workspace = true
edition.workspace = true
description = "CLI for the Oxide web framework — scaffold, generate, run, test, bench"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
